Closed Bug 96112 Opened 23 years ago Closed 23 years ago

memory leak of lock variable in prlog.c

Categories

(NSPR :: NSPR, defect, P2)

4.1.2

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: jeff, Assigned: wtc)

References

Details

(Keywords: memory-leak, perf)

Attachments

(1 file)

the variable _pr_logLock is not destroyed in _PR_LogCleanup().
please add _PR_DESTROY_LOCK_LOG() macro (near line 64 & with
all the other *_LOCK_LOG() macros) and a call to it somewhere
near the bottom of _PR_LogCleanup().

this is a static leak rather than a per-connection leak.

see also bug 94113.
marking new.
Status: UNCONFIRMED → NEW
Ever confirmed: true
Keywords: mlk, perf
Blocks: 92580
No longer blocks: 92580
Attached patch Proposed patchSplinter Review
It is not necessary to define a _PR_DESTROY_LOG_LOCK macro.
We can just call PR_DestroyLock to destroy _pr_logLock.
Fix checked into the tip of NSPR.
Status: NEW → RESOLVED
Closed: 23 years ago
OS: Windows 2000 → All
Priority: -- → P2
Hardware: PC → All
Resolution: --- → FIXED
Target Milestone: --- → 4.2
Blocks: 129902
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: