Bugzilla bug 96112: destroys _pr_logLock in _PR_CleanupLog().  The patch is contributed by Jeff Hostetler <jeff@NerdOne.com>.